--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha",
-    "start-windows": "set NODE_ENV=test && nodemon app.js",
-    "start-linux": "NODE_ENV=test nodemon app.js",
-    "start-mac": "NODE_ENV=test nodemon app.js",
-    "debug": "NODE_ENV=test nodemon --inspect app.js"
+    "test": "cross-env NODE_ENV=test mocha",
+    "start-windows": "cross-env NODE_ENV=test nodemon app.js",
+    "start-linux": "cross-env NODE_ENV=test nodemon app.js",
+    "start-mac": "cross-env NODE_ENV=test nodemon app.js",
+    "debug": "cross-env NODE_ENV=test nodemon --inspect app.js"
   },
   "author": "Oliver ",
   "license": "ISC",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "cross-env": "^7.0.3",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.7",
     "selenium-webdriver": "^4.0.0-alpha.8"
